--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2714,3 +2714,8 @@ body.article .floating_sidebar, body.article .page_content {
 .suggestionControls {
     text-align: center;
 }
+
+.button.loaded {
+    background: #595959 url("/assets/packages/static/openvk/img/loading_mini.gif") no-repeat 50% 50%;
+    padding: 16px 40px 6px 4px;
+}
