Новые поля для поиска etc.

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -671,6 +671,7 @@ input[type~="phone"],
 input[type="search"],
 input[type~="search"],
 input[type~="date"],
+input[type~="datetime-local"],
 select {
     border: 1px solid #C0CAD5;
     padding: 3px;
