--- a/Web/Presenters/templates/Report/View.xml
+++ b/Web/Presenters/templates/Report/View.xml
@@ -12,6 +12,8 @@
     <div class="tabs">{include "../NoSpam/Tabs.xml", mode => "reports"}</div>
     <br />
     <p>
+        <b>{$report->getReportAuthor()->getCanonicalName()}</b> пожаловался на <b>{$report->getContentName()}</b>
+        <br />
         <b>{_comment}:</b> {$report->getReason()}
     </p>
     {include "ViewContent.xml", type => $report->getContentType(), object => $report->getContentObject()}
@@ -21,7 +23,7 @@
             <form n:if="$report->getContentType() != 'group'" action="/admin/reportAction{$report->getId()}" method="post">
                 <input type="hidden" name="hash" value="{$csrfToken}"/>
                 <input type="submit" name="ban" value="{_ban_user_action}" class="button">
-                <input type="submit" name="delete" value="{_delete}" class="button">
+                <input n:if="$report->getContentType() !== 'user'" type="submit" name="delete" value="{_delete}" class="button">
                 <input type="submit" name="ignore" value="{_ignore_report}" class="button">
             </form>
             <form n:if="$report->getContentType() == 'group'" action="/admin/reportAction{$report->getId()}" method="post">
