--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2696,3 +2696,23 @@ body.article .floating_sidebar, body.article .page_content {
     right: 22px;
     font-size: 12px;
 }
+
+.small_red_button {
+    float: right;
+    font-weight: bold;
+}
+
+.small_red_button a {
+    color: #B0B0B0;
+}
+
+.small_red_button a:hover {
+    color: #a7a7a7;
+}
+
+.showMore {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
