--- a/Web/Presenters/templates/@listView.xml
+++ b/Web/Presenters/templates/@listView.xml
@@ -15,11 +15,11 @@
             {ifset specpage}
                 {include specpage, x => $dat}
             {else}
-                <div class="container_gray">
+                <div class="container_gray infContainer">
                     {var $data = is_array($iterator) ? $iterator : iterator_to_array($iterator)}
 
                     {if sizeof($data) > 0}
-                        <div class="content" n:foreach="$data as $dat">
+                        <div class="content infObj" n:foreach="$data as $dat">
                             <table>
                                 <tbody>
                                     <tr>
