Remove javascript positioning🤮🤮🤮

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2319,7 +2319,7 @@ a.poll-retract-vote {
     float:right;
     scrollbar-width: none;
     font-size:12px;
-    background-color:#f7f7f7;
+    background-color:#F6F6F6;
     margin-right: -7px;
 }
 
