--- a/Web/Presenters/templates/Report/ViewContent.xml
+++ b/Web/Presenters/templates/Report/ViewContent.xml
@@ -16,7 +16,7 @@
         {elseif $type == "group" || $type == "user"}
             {include "../components/group.xml", group => $object, isUser => $type == "user"}
         {elseif $type == "comment"}
-            {include "../components/comment.xml", comment => $object, timeOnly => true}
+            {include "../components/comment.xml", comment => $object, timeOnly => true, linkWithPost => true}
         {elseif $type == "note"}
             {include "./content/note.xml", note => $object}
         {elseif $type == "app"}
