Исправлено отображение блока с информацией о деактивации

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -301,7 +301,7 @@
                     </div>
                 </div>
                 {ifset $thisUser}
-                    {if !$thisUser->isBanned()}
+                    {if !$thisUser->isBanned() && !$thisUser->isDeleted()}
                         </div>
                     {/if}
                 {/ifset}
