--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -234,7 +234,7 @@
                                     {$club->getName()}
 
                                     <object type="internal/link" style="white-space: normal;" id="sug{$club->getId()}" n:if="$club->getSuggestedPostsCount() > 0 && $club->getWallType() == 2">
-                                        <a href="/club{$club->getId()}/suggested">
+                                        <a href="/club{$club->getId()}/suggested" class="linkunderline">
                                             (<b>{$club->getSuggestedPostsCount()}</b>)
                                         </a>
                                     </object>
