--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2727,3 +2727,11 @@ body.article .floating_sidebar, body.article .page_content {
         padding: 16px 40px 6px 4px !important;
     }
 }
+
+.sugglist a:hover {
+    text-decoration: underline;
+}
+
+.sugglist a[data-toogled="true"] {
+    color:black;
+}
