--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2716,3 +2716,9 @@ body.article .floating_sidebar, body.article .page_content {
 .lagged * {
     pointer-events: none;
 }
+
+.button.dragged {
+    background: #c4c4c4 !important;
+    border-color: #c4c4c4 !important;
+    color: black !important;
+}
